fixed the overflowing of the index page

--- a/styles/index.css
+++ b/styles/index.css
@@ -75,7 +75,7 @@ body {
 }
 
 .pic-sec .photo .img-fluid {
-    max-width: 350px;
+    max-width: 380px;
     border: 5px dotted #03045e;
     box-shadow: 0 5px 15px rgba(0,0,0,0.1);
     transition: transform 0.3s ease-in-out;
@@ -147,7 +147,7 @@ body {
     font-family: "IBM Plex Mono", monospace;
     font-weight: 400;
     font-style: italic;
-    margin-left: 115px;
+    margin: 15px;
     font-size: 1.1em;
     line-height: 1.8;
     text-align: justify;
